examples/test/testpolicy18121.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18121
  namespace: namespace488
spec:
  podSelector:
    matchLabels:
      key48: value7
      key2: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value12
      podSelector:
        matchLabels:
          key11: value6
          key40: value21
